--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -5,7 +5,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Arial', sans-serif;
-    background-color: #f9f9f9;
+    background-color: #fff9f9;
   }
   
   /* Center the body-container */
@@ -43,8 +43,8 @@ body {
   .sv-list-content .hm-item {
     flex: 1 1 30%;
     max-width: 400px;
-    background-color: #f5f5f5;
-    border-radius: 10px;
+    background-color: #f5f2f2;
+    border-radius: 5px;
     text-align: center;
     padding: 15px;
     transition: transform 0.3s ease;
@@ -97,20 +97,18 @@ body {
     align-items: center; /* Vertically center the content */
   }
   
-  .img-sv {
-    margin-right: 10px; /* Adjust spacing between the image and title */
-    width: 80px; /* Set the image size */
-    height: 80px; /* Set the image size */
-    overflow: hidden; /* Hide any overflowing content */
+  .img-sv .fig-img-ltr{
+    margin: 10px; /* Adjust spacing between the image and title */
+    
   }
   
-  .item-title {
+  .item-title a {
     font-size: 1.2rem;
-    font-weight: bold;
     text-decoration: none;
     max-width: 150px; 
-    flex-grow: 1; 
+  
   }
+  
 
   .item-title :hover {
     color: #1a6cd7;
