Squashed commit of the following:
commit 107b17e1d7e5efd2e60cbaa91660dc8d125dec9d
Author: vando09 <145195909+vando09@users.noreply.github.com>
Date:   Tue Oct 8 11:31:42 2024 +0700

    chinhhhh

commit 3d9acb91a664655c5554259ee42851cfe061c968
Author: vando09 <145195909+vando09@users.noreply.github.com>
Date:   Sat Sep 28 11:13:08 2024 +0700

    ticket

commit e34aec1bca3fe5f24f9934fce26323f577b54428
Author: vando09 <145195909+vando09@users.noreply.github.com>
Date:   Thu Sep 26 13:42:50 2024 +0700

    gd_bl

--- a/src/App.css
+++ b/src/App.css
@@ -375,6 +375,7 @@ h1 {
   border-radius: 4px;
   cursor: pointer;
 }
+
 .text-dark {
   color: black;  /* Màu đen cho văn bản */
   text-decoration: none;  /* Xóa gạch chân mặc định */
@@ -453,3 +454,32 @@ h1 {
   font-weight: bold;
 
 }
+
+
+.banner {
+  background-image: url('https://toigingiuvedep.vn/wp-content/uploads/2021/08/background-banner-dep-doc-dao.jpg');
+  background-size: cover;
+  background-position: center;
+  padding: 180px;
+  color: white;
+  border-radius: 10px;
+}
+
+.banner h1 {
+  font-size: 36px;
+  font-weight: bold;
+  margin-bottom: 30px;
+}
+
+.banner p {
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+
+.banner button {
+  font-size: 18px;
+  padding: 10px 20px;
+}
+
+
+
